--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
                         </div>
                     </div>
 
+
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/interest.jpg" alt="A picture of increseaning money" />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Curriculum vitae</div>
+                                <div class="portfolio-caption-subheading text-muted">Information</div>
+                            </div>
+                        </div>
+                    </div>
+
                     
                 </div>
             </div>
@@ -222,7 +238,7 @@
                    
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">I had a rather narrow perspective and I wanted a certain technology, but over time that has changed. And now I'm curious about all that web development means. </p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">I had a rather narrow perspective and I wanted a certain technology, but over time that has changed. And now I'm curious about all that web development means. <a href="apps/quotes">Quotes I like.</a> </p></div>
                 </div>
             </div>
         </section> 
@@ -342,6 +358,39 @@
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/interest.jpg" alt="Increseaning money" />
                                     <p>A simple interest calculator in javascript</p>
+                                    <ul class="list-inline">
+                                        <li>Date: November 2020</li>
+                                        <li>Client: Public</li>
+                                        <li>Category: Information</li>
+                                        <li><a href="apps/interestcalculator/interestcalculator.html">Interest Calculator</a></li>
+                                    </ul>
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                        <i class="fas fa-times mr-1"></i>
+                                        Close Project
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Modal 3-->
+        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here-->
+                                    <h2 class="text-uppercase">Curriculum vitae</h2>
+                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/interest.jpg" alt="Increseaning money" />
+                                    <p>Dinamic generated curricu</p>
                                     <ul class="list-inline">
                                         <li>Date: November 2020</li>
                                         <li>Client: Public</li>
