--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-                        <!-- Global site tag (gtag.js) - Google Analytics -->
-                <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JSLF9C7M"></script>
-                <script>
-                window.dataLayer = window.dataLayer || [];
-                function gtag(){dataLayer.push(arguments);}
-                gtag('js', new Date());
-
-                gtag('config', 'G-H1JSLF9C7M');
-                </script>
-
-
-
-
 
 
         <meta charset="utf-8" />
@@ -172,7 +159,9 @@
                                 <h4 class="subheading">My Humble Beginnings</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Programming has always been a passion, but for lack of a clear perspective I did not follow it. Now it has been clarified and so I started this project. </div>
+                        </div>
                     </li>
+
                     <!-- <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                         <div class="timeline-panel">
@@ -238,7 +227,7 @@
                    
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">I had a rather narrow perspective and I wanted a certain technology, but over time that has changed. And now I'm curious about all that web development means. <a href="apps/quotes">Quotes I like.</a> </p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">I had a rather narrow perspective and I wanted a certain technology, but over time that has changed. And now I'm curious about all that web development means. <a href="apps/quotes/quotes.php">Quotes I like.</a> </p></div>
                 </div>
             </div>
         </section> 
@@ -328,7 +317,7 @@
                                         <li>Date: October 2020</li>
                                         <li>Client: Public</li>
                                         <li>Category: Information</li>
-                                        <li><a href="apps/bustimetable/bustimetable.html">Bus timetable</a></li>
+                                        <li><a href="apps/bustimetable/bustimetable.php">Bus timetable</a></li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
@@ -362,7 +351,7 @@
                                         <li>Date: November 2020</li>
                                         <li>Client: Public</li>
                                         <li>Category: Information</li>
-                                        <li><a href="apps/interestcalculator/interestcalculator.html">Interest Calculator</a></li>
+                                        <li><a href="apps/interestcalculator/interestcalculator.php">Interest Calculator</a></li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
@@ -395,7 +384,7 @@
                                         <li>Date: November 2020</li>
                                         <li>Client: Public</li>
                                         <li>Category: Information</li>
-                                        <li><a href="apps/interestcalculator/interestcalculator.html">Interest Calculator</a></li>
+                                        <li><a href="apps/cv/cv.php">Curiculum vitae</a></li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
