Image gallery with cru user management and session

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/pngwing.com.png" alt="A picture of increseaning money" />
+                                <img class="img-fluid" src="assets/img/portfolio/OvMZBs9.jpg" alt="To Do ..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">ToDo List</div>
@@ -427,8 +427,8 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">ToDo List</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/pngwing.com.png" alt="Increseaning money" />
-                                    <p>Deserialization</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/OvMZBs9.jpg" alt="Increseaning money" />
+                                    <p>Deserialization of a Db table into object's properties</p>
                                     <ul class="list-inline">
                                         <li>Date: December 2020</li>
                                         <li>Client: Public</li>
