--- a/apps/busTime2.0/bustime2.0.html
+++ b/apps/busTime2.0/bustime2.0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      
+      <link href="css/styles.css" rel="stylesheet" />
    </head>
    <body>
       <pre id="test"></pre>
