--- a/cv.html
+++ b/cv.html
@@ -3,26 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>Curriculum vitae</title>
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/shared.css" rel="stylesheet" />
   </head>
 
   <body>
     <header>
       <div>
-        <h1><a href="#">curriculum vitae</a></h1>
+        <h1><a href="#">Curriculum vitae</a></h1>
       </div>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    <nav>
-      <table>
-        <tr>
-          <td></td>
-          <td>
-            <a href="index.html">Home</a>
-          </td>
-        </tr>
-      </table>
-    </nav>
     <main>
       <section>
         <table>
