--- a/index.html
+++ b/index.html
@@ -11,28 +11,33 @@
 
     <title>Marius Herlea Site</title>
 
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/shared.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
       <div>
-        <h1><a href="#">where is will is way</a></h1>
+        <h1><a href="#">Marius Herlea Website</a></h1>
       </div>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="cv.html">CV</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    <nav>
-      <table>
-        <tr>
-          <td></td>
-          <td>
-            <a href="cv.html">CV</a>
-          </td>
-        </tr>
-      </table>
-    </nav>
-
     <main>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Marius Studio</h1>
+          <p>I still have no idea what to write here.</p>
+          <a href="#">Discover...</a>
+        </div>
+      </section>
       <section>
         <h2>Services</h2>
 
