--- a/index.html
+++ b/index.html
@@ -12,179 +12,144 @@
     <title>Marius Herlea Site</title>
 
     <link href="css/shared.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/syle.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico" />
   </head>
 
   <body>
-    <header>
+    <header id="main-header">
       <div>
-        <h1><a href="#">Marius Herlea Website</a></h1>
+        <h1><a href="#" id="logo">Marius Herlea Website</a></h1>
       </div>
 
       <nav>
         <ul>
           <li>
-            <a href="cv.html">CV</a>
+            <a href="cv.html">Cv</a>
           </li>
         </ul>
       </nav>
+      <a href="#side-drawer" class="menu-btn">
+        <span> </span>
+        <span></span>
+        <span></span>
+      </a>
     </header>
+    <!-- <aside id="side-drawer">
+      <header>
+        <a href="#" class="menu-btn">
+          <span> </span>
+          <span></span>
+          <span></span>
+        </a>
+      </header>
+      <nav>
+        <ul>
+          <li>
+            <a href="cv.html">Cv</a>
+          </li>
+        </ul>
+      </nav>
+    </aside> -->
 
     <main>
       <section id="hero">
         <div id="hero-content">
-          <h1>Marius Studio</h1>
-          <p>I still have no idea what to write here.</p>
+          <h1>Nice to meet you</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
+            soluta quam odit quaerat officiis.
+          </p>
           <a href="#">Discover...</a>
         </div>
       </section>
-      <section>
-        <h2>Services</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-
-        <table>
-          <tr>
-            <td>
-              <img
-                alt="Marius"
-                src="assets/img/Free-delivery-vector-royalty-free-PNG.png"
-              />
-
-              <h3>E-Commerce</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit.
-              </p>
-            </td>
-
-            <td>
-              <img
-                alt="Marius"
-                src="assets/img/Free-delivery-vector-royalty-free-PNG.png"
-              />
-
-              <h3>Responsive Design</h3>
-
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit.
-              </p>
-            </td>
-
-            <td>
-              <img
-                alt="Marius"
-                src="assets/img/Free-delivery-vector-royalty-free-PNG.png"
-              />
-
-              <h3>Web Security</h3>
-
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-                maxime quam architecto quo inventore harum ex magni, dicta
-                impedit.
-              </p>
-            </td>
-          </tr>
-        </table>
-      </section>
-      <section>
+      <section id="portofolio">
         <h2>Portfolio</h2>
 
         <p>Lorem ipsum dolor sit amet consectetur.</p>
 
-        <table>
-          <tr>
-            <td>
-              <a href="#">
-                <img alt="world" src="assets/img/WRLD-EPS-02-8001.jpg" />
-              </a>
-              <br />
-              <a href="#">Bus Timetable</a>
-            </td>
+        <ul id="apps">
+          <li>
+            <a href="./apps/bustimetable/bustimetable.php">
+              <img alt="world" src="assets/img/bus-4-512.png" />
+            </a>
+            <br />
+            <a href="./apps/bustimetable/bustimetable.php">Bus Timetable</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+          <li>
+            <a href="./apps/interestcalculator/interestcalculator.php">
+              <img alt="world" src="assets/img/banknotes-512.png" />
+            </a>
+            <br />
+            <a href="./apps/interestcalculator/interestcalculator.php">
+              Interest Calculator
+            </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+          <li>
+            <a href="./apps/todo/index.php">
+              <img alt="world" src="assets/img/check-mark-11-512.png" />
+            </a>
+            <br />
+            <a href="./apps/todo/index.php">Todo List</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
 
-            <td>
-              <a href="#">
-                <img alt="world" src="assets/img/WRLD-EPS-02-8001.jpg" />
-              </a>
-              <br />
-              <a href="#"> Interest Calculator </a>
-            </td>
+          <li>
+            <a href="./apps/routesearch/route.php">
+              <img alt="world" src="assets/img/search-512.png" />
+            </a>
+            <br />
+            <a href="./apps/routesearch/route.php">Route Search</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>My projects in chronological order.</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Exercitationem laborum error obcaecati aliquid officiis iste
+          repellendus. Numquam, necessitatibus autem. Labore recusandae hic
+          aliquam provident! A voluptate esse hic officiis iure.
+        </p>
 
-            <td>
-              <a href="#">
-                <img alt="world" src="assets/img/WRLD-EPS-02-8001.jpg" />
-              </a>
-              <br />
-              <a href="#">Todo List</a>
-            </td>
-
-            <td>
-              <a href="#">
-                <img alt="world" src="assets/img/WRLD-EPS-02-8001.jpg" />
-              </a>
-              <br />
-              <a href="#">Route Search</a>
-            </td>
-          </tr>
-        </table>
+        <ul id="timeline">
+          <li>
+            <h2>August 2021-</h2>
+            <h3>E-banking</h3>
+            <p>
+              E-banking. Back-end: Spring Boot, Spring JPA, Spring Security,
+              MySQL. Front-end: HTML, JSP, Bootstrap
+            </p>
+            <a href="https://github.com/mariusherlea/ebanks">
+              https://github.com/mariusherlea/ebanks</a
+            >
+          </li>
+          <li>
+            <h2>June 2021-</h2>
+            <h3>E-Commerce</h3>
+            <p>Back-end E-commerce build with Spring Boot and MySql.</p>
+            <a href="https://github.com/mariusherlea/ecom-spring">
+              https://github.com/mariusherlea/ecom-spring
+            </a>
+          </li>
+          <li>
+            <h2>2020-</h2>
+            <h3>My Humble Beginnings</h3>
+            <p>
+              Programming has always been a passion, but for lack of a clear
+              perspective I did not follow it. Now it has been clarified and so
+              I started this project.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>About</h2>
-        <p>My projects in chronological order.</p>
 
-        <table>
-          <tr>
-            <td>
-              <h4>August 2021-</h4>
-            </td>
-            <td>
-              <h3>E-banking</h3>
-              <p>
-                E-banking. Back-end: Spring Boot, Spring JPA, Spring Security,
-                MySQL. Front-end: HTML, JSP, Bootstrap
-              </p>
-
-              <a href="https://github.com/mariusherlea/ebanks">
-                https://github.com/mariusherlea/ebanks
-              </a>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h4>June 2021-</h4>
-            </td>
-            <td>
-              <h3>E-Commerce</h3>
-              <p>Back-end E-commerce build with Spring Boot and MySql.</p>
-              <a href="https://github.com/mariusherlea/ecom-spring">
-                https://github.com/mariusherlea/ecom-spring
-              </a>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h4>2020-</h4>
-            </td>
-            <td>
-              <h3>My Humble Beinnings</h3>
-              <p>
-                Programming has always been a passion, but for lack of a clear
-                perspective I did not follow it. Now it has been clarified and
-                so I started this project.
-              </p>
-            </td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Marius Herlea</h2>
-        <h3>Website developer</h3>
         <p>
           I had a rather narrow perspective and I wanted a certain technology,
           but over time that has changed. And now I'm curious about all that web
@@ -194,7 +159,18 @@
     </main>
 
     <footer>
-      <p>Copyright &copy; 2022 by MH</p>
+      <ul>
+        <li>
+          <a href="https://www.facebook.com/marius.herlea">
+            <img src="/assets/img/facebook-3-48.png" alt="Facebook link"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/mariusherlea/">
+            <img src="/assets/img/linkedin-6-48.png" alt="Linkedin link"
+          /></a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
