--- a/apps/bustimetable/bustimetable.html
+++ b/apps/bustimetable/bustimetable.html
@@ -24,7 +24,7 @@
     />
     <meta name="description" content="Herlea Marius Bus Timetable" />
     <meta name="author" content="Herlea Marius" />
-    <link href="../../css/styles.css" rel="stylesheet" />
+    <link href="../../css/syle.css" rel="stylesheet" />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
