--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
       name="viewport"
     />
-    <meta content="Herlea Marius Website" name="description" />
+    <meta content="Marius Website" name="description" />
     <meta content="Herlea Marius" name="author" />
 
-    <title>Marius Herlea Site</title>
+    <title>Marius Site's</title>
 
     <link href="css/shared.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/syle.css" />
@@ -19,13 +19,13 @@
   <body>
     <header id="main-header">
       <div>
-        <h1><a href="#" id="logo">Marius Herlea Website</a></h1>
+        <h1><a href="#" class="logo">Marius Website's</a></h1>
       </div>
-
-      <nav>
+    </header>
+    <!--   <nav>
         <ul>
           <li>
-            <a href="cv.html">Cv</a>
+            <a href="cv.html">CV</a>
           </li>
         </ul>
       </nav>
@@ -35,7 +35,7 @@
         <span></span>
       </a>
     </header>
-    <!-- <aside id="side-drawer">
+    <aside id="side-drawer">
       <header>
         <a href="#" class="menu-btn">
           <span> </span>
@@ -153,7 +153,7 @@
         <p>
           I had a rather narrow perspective and I wanted a certain technology,
           but over time that has changed. And now I'm curious about all that web
-          development means.
+          development means. <a href="cv.html">Details about me.</a>
         </p>
       </section>
     </main>
