--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 
   <body>
     <header id="main-header">
-      <a id="logo" href="index.html">CV</a></h2>
+      <a class="logo" href="index.html">CV</a></h2>
       <nav>
         <ul>
           <li>
@@ -16,13 +16,13 @@
           </li>
         </ul>
       </nav>
-      <a href="#side-drawer" class="menu-btn">
+      <!-- <a href="#side-drawer" class="menu-btn">
         <span> </span>
         <span></span>
         <span></span>
-      </a>
+      </a> -->
     </header>
-    <aside id="side-drawer">
+    <!-- <aside id="side-drawer">
       <header>
         <a href="#" class="menu-btn">
           <span> </span>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-    </aside>
+    </aside> -->
 
     <main class="cv">
       <section>
