add atm denomination

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
             <br />
             <a href="./apps/bustimetable/bustimetable.php">Bus Timetable</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Self-explanatory title</p>
           </li>
           <li>
             <a href="./apps/interestcalculator/interestcalculator.php">
@@ -86,7 +86,7 @@
             <a href="./apps/interestcalculator/interestcalculator.php">
               Interest Calculator
             </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Self-explanatory title</p>
           </li>
           <li>
             <a href="./apps/todo/index.php">
@@ -94,7 +94,7 @@
             </a>
             <br />
             <a href="./apps/todo/index.php">Todo List</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Self-explanatory title</p>
           </li>
 
           <li>
@@ -103,7 +103,18 @@
             </a>
             <br />
             <a href="./apps/routesearch/route.php">Route Search</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>
+              Use of stripos function of php to search relevant value in array
+            </p>
+          </li>
+
+          <li>
+            <a href="./apps/atm-denom">
+              <img alt="world" src="assets/img/check-mark-11-512.png" />
+            </a>
+            <br />
+            <a href="./apps/atm-denom">Todo List</a>
+            <p>Atm denomination mecanism in java script</p>
           </li>
         </ul>
       </section>
