--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <li>
             <a href="./apps/atm-denom">
-              <img alt="world" src="assets/img/check-mark-11-512.png" />
+              <img alt="world" src="assets/img/atm-512.png" />
             </a>
             <br />
             <a href="./apps/atm-denom">Todo List</a>
