rectify cv's date

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <img alt="world" src="assets/img/atm-512.png" />
             </a>
             <br />
-            <a href="./apps/atm-denom">Todo List</a>
+            <a href="./apps/atm-denom">ATM</a>
             <p>Atm denomination mecanism in java script</p>
           </li>
         </ul>
